gradle config for jar task